practice/basic-LB/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hare
    group: animals
  name: blue
spec:
  selector:
    matchLabels:
      group: animals
  replicas: 2
  template:
    metadata:
      labels:
        group: animals
        app: hare
    spec:
      containers:
      - name: hare
        image: supergiantkir/animals:hare
        ports:
          - containerPort: 80
