practice/basic-LB/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  labels:
    app: bear
spec:
  selector:
    app: bear
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
