practice/basic-LB/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: animals-service
  labels:
    group: animals
spec:
  selector:
    group: animals
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
